FaultLocalization: Improve suspiciousness detection
* Add minimum threshold
* Improve annotation by not adding it to parent of statements (e.g.
surrounding if-blocks)